--- a/DataPopulation.ipynb
+++ b/DataPopulation.ipynb
@@ -2068,6 +2068,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listOfDates = []\n",
+    "SymptomsList = []\n",
+    "otherSymptoms = []\n",
+    "for n in range(8):\n",
+    "    SymptomsList.append(\"yes\")\n",
+    "for n in range(2):\n",
+    "    SymptomsList.append(\"no\")\n",
+    "\n",
+    "for n in range(1):\n",
+    "    otherSymptoms.append(\"yes\")\n",
+    "for n in range(19):\n",
+    "    otherSymptoms.append(\"no\")\n",
+    "\n",
+    "for n in range(8, 15):\n",
+    "    listOfDates.append(str(n) + \"0124\")\n",
+    "for i, row in enumerate(data[\"Did you experience any symptoms?\"]):\n",
+    "    symptomsYesNo = random.choice(SymptomsList)\n",
+    "    data.at[i, \"Did you experience any symptoms?\"] = symptomsYesNo\n",
+    "    if symptomsYesNo == \"yes\":\n",
+    "        data.at[i, 'Did you experience fever?'] = random.choice([\"yes\", \"no\"])\n",
+    "        data.at[i, 'What is the earliest onset date of your symptoms'] = random.choice(listOfDates)\n",
+    "        data.at[i, \"What is the earliest onset time of your symptoms\"] = random.randrange(100, 2300, 100)\n",
+    "        data.at[i,\"What was the highest recorded temperature\"] = (random.randrange(375, 400))/10\n",
+    "        VomitYesNo = random.choice(\"yes\", \"no\")\n",
+    "        data.at[i,\"Did you experience vomiting?\"] = VomitYesNo\n",
+    "        if VomitYesNo == \"yes\":\n",
+    "            data.at[i,\"How many times did you vomit?\"] = random.randrange(1, 9, 1)\n",
+    "\n",
+    "        diarrhoeaYesNo = random.choice(\"yes\", \"no\")\n",
+    "        data.at[i, \"Did you experience diarrhoea?\"] = diarrhoeaYesNo\n",
+    "        if diarrhoeaYesNo == \"yes\":\n",
+    "            data.at[i,\"Please indicate the most number of episodes that you have experience diarrhoea in 24 hours\"] = random.randrange(1, 9, 1)\n",
+    "            data.at[i,\"descripe the colour of your loose stools\"] = random.choice([\"black\", \"Blue\", \"Brown\", \"Clear watery\", \"Green\", \"Grey\", \"Red\", \"White / Pale\"])\n",
+    "        \n",
+    "        data.at[i,\"Did you experience nausea?\"] = random.choice(\"yes\", \"no\")\n",
+    "        data.at[i,\"Did you experience abdominal pain?\"] = random.choice(\"yes\", \"no\")\n",
+    "        data.at[i,\"Did you experience headache?\"] = random.choice(\"yes\", \"no\")\n",
+    "        data.at[i,\"Other symptoms\"] = random.choice(otherSymptoms)\n",
+    "        data.at[i, \"Were you unwell with GE symptoms (diarrhoea/vomiting) in the past 2 weeks?\"] = random.choice(\"yes\", \"no\")\n",
+    "        data.at[i,\"What is the earliest date you had diarrhoea / vomitting in the past 2 weeks\"] = random.randrange(1,8)\n",
+    "        householdYesNo = random.choice(['yes', 'no'])\n",
+    "        data.at[i,\"Has any of your household members experience GE illness within the week?\"] = random.choice(['yes', 'no'])\n",
+    "        if householdYesNo == \"yes\":\n",
+    "            data.at[i,\"What is the date of the symptom onset for your household members?\"] = random.choice(listOfDates)\n",
+    "            data.at[i,\"Please indicate the number of household members that experienced diarrhoea/vomiting after your symptom onset\"] = random.randrange(1,6)\n",
+    "        \n",
+    "        householdYesNo = random.choice([\"yes\", \"no\"])\n",
+    "        data.at[i,\"Do you have household members who were unwell with diarrhoea/vomiting symptoms in the past 2 weeks before your symptoms onset?\"] = householdYesNo\n",
+    "        friendDiarOrVomit = random.choice([\"yes\", \"no\"])\n",
+    "        data.at[i,\"Do you have any friends/colleagues who were unwell with diarrhoea/vomiting symptoms in the past 2 weeks before your symptoms onset?\"] = friendDiarOrVomit\n",
+    "        if friendDiarOrVomit == \"yes\":    \n",
+    "            data.at[i,\"When did household members / friends / colleagues experience diarrhoea/ vomiting in the past 2 weeks?\"] = random.choice(listOfDates)\n",
+    "for i, row in enumerate(data['[MyInfo] Name']):\n",
+    "    data.at[i, '[MyInfo] Name'] = ''.join([random.choice(string.ascii_letters) for u in range(10)])\n",
+    "    data.at[i, 'NRIC/FIN'] = \"t\" + str(i) + \"x\"\n",
+    "    data.at[i, 'sgID Validated NRIC'] = \"t\" + str(i) + \"x\"\n",
+    "    data.at[i, '[MyInfo] Gender'] = random.choice([\"m\", \"f\"])\n",
+    "    data.at[i, '[MyInfo] Date of birth'] = str(random.randrange(1, 30)) + str(random.randrange(1, 13)) + str(random.randrange(1999, 2005))\n",
+    "    data.at[i, \"[MyInfo] Race\"] = random.choice(\"chinese\", \"malay\", \"indian\", \"others\")\n",
+    "    data.at[i, \"Mobile number\"] = random.randrange(80000000, 99999999)\n",
+    "    data.at[i, \"Which camp are you from?\"] = random.choice(CampOptions)\n",
+    "    data.at[i, \"Which company (COY) are you from?\"] = random.randrange(1,4)\n",
+    "    data.at[i, \"Which Platoon are you from?\"] = random.randrange(1,5)\n",
+    "    data.at[i, \"Which section are you from?\"] = random.randrange(1,5)\n",
+    "    data.at[i, \"What is your bed no?\"] = random.randrange(1,17)\n",
+    "    data.at[i, 'Date of Outbreak declared'] = random.choice(\"150124\", \"160124\", \"170124\")\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 185,
    "metadata": {},
    "outputs": [],
